--- a/fabricstandard.html
+++ b/fabricstandard.html
@@ -18,6 +18,33 @@
 		</nav>
 		
 	</header>
+	<section>
+		<div class="conteiner">
+			<!-- <h2 class="album-1">FABRIC STANDARD|ALBUM</h2> -->
+			<img src="image/album.png" class="album-1">
+				<div class="left-block">
+					<ul class="ablum-list">
+						<li class="music">1.Fabric Standard</li>
+						<li class="music">2.Golden Maggot</li>
+						<li class="music">3.Yellow</li>
+						<li class="music">4.Modern Romance</li>
+						<li class="music">5.Sunny Day</li>
+						<li class="music">6.Factionate Group</li>
+						<li class="music">7.Smile</li>
+						<li class="music">8.About</li>
+						<li class="music">9.Careless</li>
+						<li class="music">10.Every Year</li>
+						<li class="music">11.Fever</li>
+					</ul>
+				</div>
+				<div class="right-block">
+					<div class="div-cover">
+						<img src="image/ablum-cover.jpg" alt="cover" class="cover">
+					</div>
+					
+				</div>
+		</div>
+	</section>
 
 </body>
 </html>
