--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@
 				</div>
 		</div>
 	</section>
-	<section class="section-conteiner">
-		<div class="conteiner">
-			<h2 class="news">|NEWS|</h2>
-		</div>
+	<footer class="section-conteiner">
+		
+			<div class="footer">
+				
+			</div>
+
+			
+		
 
 		
-	</section>
+	</footer>
 	
 
 </body>
